# Direct_GeoRef

./: .gitignore  CLAUDE.md  environment.yml  pyproject.toml  run_nrep25_analysis.py
notebooks/: 01-georectification.ipynb
spec-anchor/_bmad/: architecture.md  prd.md  traceability.md
spec-anchor/epics/: epic-01-non-dji-support.md  epic-02-output-and-analysis.md
spec-anchor/epics/stories/: s01-01-phaseone-xmp-parsing.md  s01-02-from-sensor-spec.md  s02-01-vector-export.md  s02-02-ice-statistics.md  s02-03-route-planning.md
spec-anchor/openspec/capabilities/camera-model/: spec.md
spec-anchor/openspec/capabilities/georectification/: spec.md
spec-anchor/openspec/capabilities/ice-analysis/: spec.md
spec-anchor/openspec/capabilities/metadata-extraction/: spec.md
spec-anchor/openspec/capabilities/route-planning/: spec.md
spec-anchor/openspec/capabilities/vector-export/: spec.md
spec-anchor/ops/: changelog.md  known-issues.md  status.md
src/direct_georef/: __init__.py  camera.py  export.py  flow.py  georectify.py  icestats.py  metadata.py  routing.py  tracking.py  vector.py
tests/: test_camera.py  test_georectify.py  test_icestats.py  test_routing.py  test_vector.py
